[package]
name = "starfish"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
license = "MIT/Apache-2.0"
description = """
Async programming with spdk for rust.
"""

[dependencies]
# General
failure = "0.1.1"

rust-spdk = { path = "rust-spdk" }
starfish-executor = { path = "starfish-executor" }

[dev-dependencies]
cargo-make = "0.10.0"
hamcrest = "0.1.2"
spectral = "0.6.0"
slog-term = "2.0.2"

[build-dependencies]
bindgen = "0.37.0"
make-cmd = "0.1.0"
toml = "0.4.6"

[workspace]

members = [
  "starfish-executor",
  "rust-spdk",
]
