[package]
name = "starfish"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
license = "MIT/Apache-2.0"
description = """
Async programming with spdk for rust.
"""
edition = '2018'

[dependencies]
failure = "= 0.1.2"
futures-preview = "= 0.3.0-alpha.18"
#libc = "= 0.2.43"

[dev-dependencies]
spectral = "= 0.6.0"
slog-term = "=2.0.2"

[workspace]

members = [
  #"spdk-sys",
  "starfish-executor",
  #"starfish-example-app",
  "starfish-file",
  "starfish-futures"
]
