[package]
name = "rust-spdk"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
workspace = "../"
categories = ["external-ffi-bindings"]
build = "build.rs"
description = """
Rust bindings to spdk.
"""

[lib]
name = "rust_spdk"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[dependencies]
#failure = "*"

[build-dependencies]
# Enable when regenerating bindings
bindgen = "*"
toml = "*"
make-cmd = "*"
