[package]
name = "smp-core"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]

[dependencies]
smp-resource = { path = "../smp-resource" }
futures-core = { path = "../futures-rs/futures-core" }

libc = "*"
error-chain = "*"
slog = "*"
bounded-spsc-queue = "*"
slab = "*"
crossbeam = "*"
itertools = "*"

[dev-dependencies]
hamcrest = "*"
spectral = "*"
slog-term = "*"
