[package]
name = "spdk-async"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
description = """
Async wrappers for spdk-sys.
"""
edition = '2018'

[dependencies]
err-derive = ""
futures-preview = "= 0.3.0-alpha.17"
libc = ""
spdk-sys = { path = "../spdk-sys" }

[dev-dependencies]
hamcrest2 = "*"
starfish-executor = { path = "../starfish-executor" }
