[package]
name = "spdk-sys"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
categories = ["external-ffi-bindings"]
build = "build.rs"
description = """
Rust bindings to spdk.
"""
edition = '2018'

links = "spdk"

[dependencies]
failure = ""
failure_derive = ""
futures-preview = "= 0.3.0-alpha.7"
libc = ""

[build-dependencies]
bindgen = "= 0.41.0"

[dev-dependencies]
hamcrest2 = "*"
starfish-executor = { path = "../starfish-executor" }
