[package]
name = "starfish-example-app"
version = "0.1.0"
workspace = "../"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
description = """
Example app that uses the APIs.
"""

[dependencies]
spdk-sys = { path = "../spdk-sys" }
starfish-executor = { path = "../starfish-executor" }
futures-util = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "cf130ff" }
