[package]
name = "starfish-example-app"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
description = """
Example app that uses the APIs.
"""
edition = '2018'

[dependencies]
spdk-sys = { path = "../spdk-sys" }
starfish-executor = { path = "../starfish-executor" }

failure = ""
futures-preview = "= 0.3.0-alpha.18"