[package]
name = "starfish-executor"
version = "0.1.0"
workspace = "../"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
description = """
Single threaded executor for futures-rs. No Arc in sight.
"""

[dependencies]
futures-core = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "cf130ff" }
#futures-util = "*"

[dev-dependencies]
#futures = "*"
hamcrest = "*"
