[package]
name = "starfish-file"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
description = """
Async File IO
"""

edition = '2018'

[dependencies]
io-uring = ""
liburing-sys = ""

simple-error = ""
snafu = ""
slog = "2.5.2"
regex = ""
lazy_static = ""

tokio = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["rt-full", "sync"] }
tokio-executor = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7", features=["current-thread"] }
tokio-fs = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev="654f9d7" }
futures-preview = "=0.3.0-alpha.18"

intrusive-collections = ""
bytes = ""
byteorder = ""
derive_builder = ""
err-derive = ""

[dev-dependencies]
hamcrest2 = "*"
tempfile = ""
tempdir = ""
