[package]
name = "starfish-file"
version = "0.1.0"
authors = ["Jakub Kozlowski <mail@jakub-kozlowski.com>"]
description = """
Async File IO
"""

edition = '2018'

[dependencies]
#io-uring = ""
#liburing-sys = ""

simple-error = ""
snafu = ""

regex = ""
lazy_static = ""

# 5f2f3f076d7c68c6cd31ff388ca14f3e7b463ab7
tokio = { version = "0.2.0-alpha.2", features=["rt-full", "sync", "timer"] }
tokio-executor = { version = "0.2.0-alpha.2", features=["current-thread"] }
tokio-fs = "0.2.0-alpha.6"
tokio-sync = "0.2.0-alpha.6"
futures-preview = "= 0.3.0-alpha.19"
futures-intrusive = ""
tonic = "0.1.0-alpha.1"
prost = "0.5"
prost-derive = "0.5"

bytes = ""
byteorder = ""
crc = ""
derive_builder = ""
enum_dispatch = ""
err-derive = ""
intrusive-collections = ""
slog = {version = "2.5.2", features = ["nested-values", "nothreads"] }
erased-serde = ""
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hamcrest2 = "*"
tempfile = ""
tempdir = ""
rand = ""
is_sorted = ""
